--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ setenv =
     PYTHONPATH={toxinidir}
     COVERAGE_FILE = .coverage.baseline
 commands =
-    pytest --cov=neurodamus --cov-report=term-missing --cov-report=xml:.coverage.baseline.xml tests/test_import.py
+    pytest --cov=neurodamus --cov-report=term-missing tests/test_import.py
 
 [testenv:unit]
 deps =
@@ -33,7 +33,7 @@ allowlist_externals =
     sh
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
-    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --cov-report=xml:.coverage.baseline.xml --forked {posargs:tests/unit}"
+    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
