fix coveralls race condition (#228)
## Context
coveralls sometimes fails because of race conditions:

https://github.com/openbraininstitute/neurodamus/actions/runs/14730918755/job/41344729187?pr=227

## Scope
Coverall runs in parallel now.
Fix: #229 (second option: the total is automatic in the publishing stage)

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ deps =
     pytest-cov
 setenv =
     PYTHONPATH={toxinidir}
+    COVERAGE_FILE = .coverage.baseline
 commands =
     pytest --cov=neurodamus --cov-report=term-missing tests/test_import.py
 
@@ -26,6 +27,7 @@ deps =
 setenv =
     NEURON_INIT_MPI=0
     PYTHONPATH={toxinidir}
+    COVERAGE_FILE = .coverage.unit
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
     sh
