--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,10 +1,10 @@
 name: Build coverage reports
 
 on:
-    pull_request:
-    push:
-      branches:
-        - main
+  pull_request:
+  push:
+    branches:
+      - main
 
 jobs:
   coverage:
@@ -15,34 +15,50 @@ jobs:
       fail-fast: false
 
     steps:
+      - uses: actions/checkout@v4
 
-    - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
 
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.9'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip tox coverage
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip tox coverage
+      - name: Run tox baseline
+        run: |
+          tox -e baseline
 
-    - name: Run tox baseline
-      run: |
-        tox -e baseline
+      - name: Run tox unit
+        run: |
+          tox -e unit
 
-    - name: Coveralls
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      uses: coverallsapp/github-action@v2
-      with:
-        flag-name: baseline
+      - name: Upload baseline coverage to Coveralls
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        uses: coverallsapp/github-action@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          file: .coverage.baseline
+          flag-name: baseline
+          parallel: true
 
-    - name: Run tox unit
-      run: |
-        rm -rf .coverage
-        tox -e unit
+      - name: Upload unit coverage to Coveralls
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        uses: coverallsapp/github-action@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          file: .coverage.unit
+          flag-name: unit
+          parallel: true
 
-    - name: Coveralls
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      uses: coverallsapp/github-action@v2
-      with:
-        flag-name: unit
+  finish:
+    if: ${{ always() }}
+    needs: coverage
+    runs-on: ubuntu-latest
+    steps:
+      - name: Finalize Coveralls parallel build
+        uses: coverallsapp/github-action@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          parallel-finished: true
+          carryforward: "baseline,unit"
