add build check

--- a/tox.ini
+++ b/tox.ini
@@ -47,12 +47,13 @@ setenv =
     NEURON_INIT_MPI=1
     RDMAV_FORK_SAFE=1
     COVERAGE_FILE = .coverage.unit-mpi
+    TMPDIR={toxinidir}/removeme
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
     sh
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
-    sh -c ". {toxworkdir}/.envfile && pytest -x -s -vv --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}"
+    sh -c ". {toxworkdir}/.envfile && pytest -x -s --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}"
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
