--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -25,6 +25,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip tox coverage
 
+      - name: Install dependencies for ${{ matrix.os }}
+        run: |
+          if [[ $RUNNER_OS == 'Linux' ]]; then
+            sudo apt-get update
+            sudo apt-get install -y libopenmpi-dev openmpi-bin
+          elif [[ $RUNNER_OS == 'macOS' ]]; then
+            # Install MPI and Python dependencies for macOS
+            brew update
+            brew install open-mpi
+          fi
+          python -m pip install --upgrade pip tox coverage
+
       - name: Run tox baseline
         run: |
           tox -e baseline
@@ -32,6 +44,10 @@ jobs:
       - name: Run tox unit
         run: |
           tox -e unit
+      
+      - name: Run tox unit-mpi
+        run: |
+          tox -e unit-mpi
 
       - name: Upload baseline coverage to Coveralls
         if: ${{ matrix.os == 'ubuntu-latest' }}
@@ -49,6 +65,15 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           file: .coverage.unit
           flag-name: unit
+          parallel: true
+
+      - name: Upload unit coverage to Coveralls
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        uses: coverallsapp/github-action@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          file: .coverage.unit-mpi
+          flag-name: unit-mpi
           parallel: true
 
   finish:
