--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 name = neurodamus
 
 [tox]
-envlist = flake8, format, unit, baseline, integration-e2e, scientific
+envlist = flake8, format, unit, unit-mpi, baseline, integration-e2e, scientific
 
 [testenv]
 deps =
@@ -34,6 +34,25 @@ allowlist_externals =
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
+
+[testenv:unit-mpi]
+# Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
+deps =
+    {[testenv]deps}
+    pytest-cov
+    neuron-nightly
+    -r tests/unit-mpi/requirements.txt
+setenv =
+    PYTHONPATH={toxinidir}
+    NEURON_INIT_MPI=1
+    RDMAV_FORK_SAFE=1
+    COVERAGE_FILE = .coverage.unit-mpi
+allowlist_externals =
+    {toxinidir}/ci/build_ndcore.sh
+    sh
+commands =
+    {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
+    sh -c ". {toxworkdir}/.envfile && pytest -x -s --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}"
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
