--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 name = neurodamus
 
 [tox]
-envlist = flake8, format, unit, unit-mpi, baseline, integration-e2e, scientific
+envlist = flake8, format, unit, unit-ngv, unit-mpi, baseline, integration-e2e, scientific
 
 [testenv]
 deps =
@@ -34,6 +34,23 @@ allowlist_externals =
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
+
+[testenv:unit-ngv]
+deps =
+    {[testenv]deps}
+    pytest-cov
+    neuron-nightly
+    morphio
+setenv =
+    NEURON_INIT_MPI=0
+    PYTHONPATH={toxinidir}
+    COVERAGE_FILE = .coverage.unit-ngv
+allowlist_externals =
+    {toxinidir}/ci/build_ndcore.sh
+    sh
+commands =
+    {toxinidir}/ci/build_ndcore.sh -ngv {toxinidir}/neurodamus/data {toxworkdir}
+    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit-ngv}"
 
 [testenv:unit-mpi]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
