--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -196,21 +196,6 @@ jobs:
         cmake --install neurodamus-models/build
         echo "NEURODAMUS_NEOCORTEX_ROOT=$(pwd)/neurodamus-models/install" >> $GITHUB_ENV;
 
-        # Build neocortex-multiscale model
-        echo "build neurodamus-neocortex-multiscale model"
-        cmake -B neurodamus-models/build_multiscale -S neurodamus-models/ \
-          -DCMAKE_INSTALL_PREFIX=$PWD/neurodamus-models/install_multiscale \
-          -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=ON \
-          -DCMAKE_PREFIX_PATH=$SONATAREPORT_DIR \
-          -DNEURODAMUS_CORE_DIR=${DATADIR} \
-          -DNEURODAMUS_MECHANISMS=neocortex \
-          -DNEURODAMUS_NCX_METABOLISM=ON \
-          -DNEURODAMUS_NCX_NGV=ON \
-          -DNEURODAMUS_ENABLE_CORENEURON=OFF
-        cmake --build neurodamus-models/build_multiscale
-        cmake --install neurodamus-models/build_multiscale
-        echo "NEURODAMUS_NEOCORTEX_MULTISCALE_ROOT=$(pwd)/neurodamus-models/install_multiscale" >> $GITHUB_ENV;
-
     - name: load neocortex model
       run: |
         export PYTHONPATH=$(pwd)/nrn/build/install/lib/python:$PYTHONPATH
@@ -244,6 +229,10 @@ jobs:
       run: |
         tox -e unit
 
+    - name: unit-ngv
+      run: |
+        tox -e unit-ngv
+
     - name: unit-mpi
       run: |
         tox -e unit-mpi
@@ -259,13 +248,6 @@ jobs:
     - name: scientific
       run: |
         tox -e scientific
-
-    - name: scientific-ngv
-      run: |
-        export HOC_LIBRARY_PATH=$NEURODAMUS_NEOCORTEX_MULTISCALE_ROOT/share/neurodamus_neocortex/hoc
-        export NRNMECH_LIB_PATH=$NEURODAMUS_NEOCORTEX_MULTISCALE_ROOT/lib/libnrnmech.so
-        unset CORENEURONLIB
-        tox -e scientific-ngv
 
     # - name: live debug session, comment out
     #   if: failure()
