absolute import / add dunder init

--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,7 @@ allowlist_externals =
     sh
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
+    # note: `--forked` and `pytest-isolate-mpi` don't play well: https://github.com/dlr-sp/pytest-isolate-mpi/issues/30
     sh -c ". {toxworkdir}/.envfile && pytest -x -s --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}"
 
 [testenv:integration-e2e]
