revert removal of flake8

--- a/tox.ini
+++ b/tox.ini
@@ -90,6 +90,12 @@ commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
     pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific-ngv}
 
+[testenv:flake8]
+changedir = {toxinidir}
+deps = flake8-pyproject
+skip_install = True
+commands = flake8
+
 [testenv:lint]
 skip_install = True
 deps =
