--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 name = neurodamus
 
 [tox]
-envlist = flake8, format, unit, unit-mpi, baseline, integration-e2e, scientific
+envlist = flake8, format, unit, unit-ngv, unit-mpi, baseline, integration-e2e, scientific
 
 [testenv]
 deps =
@@ -34,6 +34,23 @@ allowlist_externals =
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
+
+[testenv:unit-ngv]
+deps =
+    {[testenv]deps}
+    pytest-cov
+    neuron-nightly
+    morphio
+setenv =
+    NEURON_INIT_MPI=0
+    PYTHONPATH={toxinidir}
+    COVERAGE_FILE = .coverage.unit-ngv
+allowlist_externals =
+    {toxinidir}/ci/build_ndcore.sh
+    sh
+commands =
+    {toxinidir}/ci/build_ndcore.sh -ngv {toxinidir}/neurodamus/data {toxworkdir}
+    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit-ngv}"
 
 [testenv:unit-mpi]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
@@ -75,20 +92,6 @@ setenv =
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
     pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific}
-
-[testenv:scientific-ngv]
-# Please you need to spack load neurodamus-models model=neocortex +ngv+metabolism or use an equivalent spack virtual env
-deps =
-    {[testenv]deps}
-    morphio
-passenv = *
-setenv =
-    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
-    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
-    NEURON_INIT_MPI=1
-commands =
-    python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
-    pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific-ngv}
 
 [testenv:flake8]
 changedir = {toxinidir}
