--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,7 @@ deps =
     pytest-cov
     neuron-nightly
     morphio
+    -r tests/unit-mpi/requirements.txt
 setenv =
     NEURON_INIT_MPI=0
     PYTHONPATH={toxinidir}
@@ -50,7 +51,7 @@ allowlist_externals =
     sh
 commands =
     {toxinidir}/ci/build_ndcore.sh -ngv {toxinidir}/neurodamus/data {toxworkdir}
-    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit-ngv}"
+    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-ngv}"
 
 [testenv:unit-mpi]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
