Adds coverage threshold

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -8,6 +8,10 @@ on:
 
 jobs:
   coverage:
+    status:
+      project:
+        default:
+        threshold: 0.01 
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
