--- a/tox.ini
+++ b/tox.ini
@@ -43,8 +43,9 @@ deps =
     morphio
     -r tests/unit-mpi/requirements.txt
 setenv =
-    NEURON_INIT_MPI=1
     PYTHONPATH={toxinidir}
+    NEURON_INIT_MPI=1    
+    RDMAV_FORK_SAFE=1
     COVERAGE_FILE = .coverage.unit-ngv
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
