--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 name = neurodamus
 
 [tox]
-envlist = flake8, format, unit, unit-ngv, unit-mpi, baseline, integration-e2e, scientific
+envlist = flake8, format, unit, unit-ngv-mpi, unit-mpi, baseline, integration-e2e, scientific
 
 [testenv]
 deps =
@@ -35,7 +35,7 @@ commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
-[testenv:unit-ngv]
+[testenv:unit-ngv-mpi]
 deps =
     {[testenv]deps}
     pytest-cov
@@ -46,13 +46,13 @@ setenv =
     PYTHONPATH={toxinidir}
     NEURON_INIT_MPI=1    
     RDMAV_FORK_SAFE=1
-    COVERAGE_FILE = .coverage.unit-ngv
+    COVERAGE_FILE = .coverage.unit-ngv-mpi
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
     sh
 commands =
     {toxinidir}/ci/build_ndcore.sh -ngv {toxinidir}/neurodamus/data {toxworkdir}
-    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-ngv}"
+    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-ngv-mpi}"
 
 [testenv:unit-mpi]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
