--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,12 +135,14 @@ ignore = [
     "D107",   # undocumented-public-init
     "D417",   # undocumented-param
 
+    ### to be done when have memory tracking
+    "PLC0415",# import-outside-top-level
+
     ### to be removed through: https://github.com/openbraininstitute/neurodamus/issues/47
     "TRY003", # raise-vanilla-args
     "SLF001", # private-member-access
     "EM101",  # raw-string-in-exception
     "EM102",  # f-string-in-exception
-    "PLC0415",# import-outside-top-level
     "RUF012", # mutable-class-default
     "TRY002", # raise-vanilla-class
     "N806",   # non-lowercase-variable-in-function
