--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 name = neurodamus
 
 [tox]
-envlist = flake8, format, unit, unit-ngv-mpi, unit-mpi, baseline, integration-e2e, scientific
+envlist = format, unit, unit-ngv-mpi, unit-mpi, baseline, integration-e2e, scientific
 
 [testenv]
 deps =
@@ -94,12 +94,6 @@ setenv =
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
     pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific}
-
-[testenv:flake8]
-changedir = {toxinidir}
-deps = flake8-pyproject
-skip_install = True
-commands = flake8
 
 [testenv:lint]
 skip_install = True
