--- a/.github/workflows/lint_check.yml
+++ b/.github/workflows/lint_check.yml
@@ -12,11 +12,8 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
 
-    - name: Install flake8
+    - name: Install tox
       run: pip install tox
-
-    - name: Run flake8
-      run: tox -eflake8
 
     - name: Run linting
       run: tox -elint
