--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,13 @@ dynamic = ["version"]
 dependencies = [
     "h5py",
     "docopt-ng",
-    "libsonata",
+    "libsonata @ git+https://github.com/openbraininstitute/libsonata",
     "psutil"
 ]
 requires-python=">=3.9"
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [project.optional-dependencies]
 plotting=['matplotlib'] # only for Neurodamus HL API
