--- a/tox.ini
+++ b/tox.ini
@@ -35,23 +35,34 @@ commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
+; [testenv:removeme]
+; passenv = *
+; deps =
+;     {[testenv]deps}
+;     pytest-cov
+;     neuron-nightly
+;     morphio
+; setenv =
+;     NEURON_INIT_MPI=0
+;     PYTHONPATH={toxinidir}
+;     COVERAGE_FILE = .coverage.unit
+; allowlist_externals =
+;     {toxinidir}/ci/build_ndcore.sh
+;     sh
+; commands =
+;     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
+;     sh -c ". {toxworkdir}/.envfile && pytest -x --forked --basetemp={toxinidir}/removeme {posargs:tests/unit/test_ringcells_reports.py}"
+
 [testenv:removeme]
+# Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
-deps =
-    {[testenv]deps}
-    pytest-cov
-    neuron-nightly
-    morphio
 setenv =
-    NEURON_INIT_MPI=0
-    PYTHONPATH={toxinidir}
-    COVERAGE_FILE = .coverage.unit
-allowlist_externals =
-    {toxinidir}/ci/build_ndcore.sh
-    sh
+    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
+    NEURON_INIT_MPI=1
 commands =
-    {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
-    sh -c ". {toxworkdir}/.envfile && pytest -x --forked {posargs:tests/unit/test_ringcells_reports.py}"
+    python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
+    pytest --forked --durations=5 --durations-min=15 --basetemp={toxinidir}/removeme {posargs:tests/integration-e2e/test_reports.py}
 
 [testenv:unit-ngv-mpi]
 deps =
