--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,13 @@ dynamic = ["version"]
 dependencies = [
     "h5py",
     "docopt-ng",
-    "libsonata @ git+https://github.com/openbraininstitute/libsonata@katta/comp_sets_2",
+    "libsonata @ git+https://github.com/openbraininstitute/libsonata@katta/comp_sets_2", # TODO: remove when libsonata@katta/comp_sets_2 is merged
     "psutil"
 ]
 requires-python=">=3.9"
 
-[tool.hatch.metadata]
-allow-direct-references = true
+[tool.hatch.metadata] # TODO: remove when libsonata@katta/comp_sets_2 is merged
+allow-direct-references = true # TODO: remove when libsonata@katta/comp_sets_2 is merged
 
 [project.optional-dependencies]
 plotting=['matplotlib'] # only for Neurodamus HL API
