libsonata now is in master
Use BaseCell.get_sec in ngv

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 docopt
 h5py
-git+https://github.com/openbraininstitute/libsonata@katta/comp_sets_2 # TODO: remove when libsonata@katta/comp_sets_2 is merged
+git+https://github.com/openbraininstitute/libsonata # TODO: remove when libsonata is merged
 numpy
 
