--- a/tests/unit-mpi/requirements.txt
+++ b/tests/unit-mpi/requirements.txt
@@ -1,2 +1,4 @@
 pytest-isolate-mpi
-mpi4py<=4.0.3 # Must match OpenMPI 4 (uses libmpi.so.12). 4.1+ passed to OpenMPI 5.
+
+# force building mpi4py so that it picks up openmpi or mpich, whichever is installed
+mpi4py --no-binary=mpi4py
