--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,18 @@ commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
+[testenv:removeme]
+# Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
+passenv = *
+setenv =
+    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
+    NEURON_INIT_MPI=1
+commands =
+    python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
+    pytest --forked --durations=5 --durations-min=15 --basetemp={toxinidir}/removeme {posargs:tests/scientific/test_neuromodulation.py}
+
+
 [testenv:unit-ngv-mpi]
 deps =
     {[testenv]deps}
