--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -69,13 +69,15 @@ jobs:
           ${{ matrix.os }}-pip-
 
     - name: Get latest tags
+      - env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         echo "NEURON_BRANCH=${{ inputs.NEURON_BRANCH || github.event.inputs.NEURON_BRANCH || 'master' }}" >> $GITHUB_ENV
-        LIBSONATA_LATEST=$(curl -s https://api.github.com/repos/openbraininstitute/libsonata/tags | jq -r '.[0].name')
+        LIBSONATA_LATEST=$(curl --request GET --url https://api.github.com/repos/openbraininstitute/libsonata/tags --header "Authorization: Bearer $GH_TOKEN" | jq -r '.[0].name')
         echo "LIBSONATA_BRANCH=${{ inputs.LIBSONATA_BRANCH || github.event.inputs.LIBSONATA_BRANCH || '$LIBSONATA_LATEST' }}" >> $GITHUB_ENV
-        LIBSONATA_REPORT_LATEST=$(curl -s https://api.github.com/repos/openbraininstitute/libsonatareport/tags | jq -r '.[0].name')
+        LIBSONATA_REPORT_LATEST=$(curl --request GET --url https://api.github.com/repos/openbraininstitute/libsonatareport/tags --header "Authorization: Bearer $GH_TOKEN" | jq -r '.[0].name')
         echo "LIBSONATA_REPORT_BRANCH=${{ inputs.LIBSONATA_REPORT_BRANCH || github.event.inputs.LIBSONATA_REPORT_BRANCH || '$LIBSONATA_REPORT_LATEST' }}" >> $GITHUB_ENV
-        NEURODAMUS_MODELS_LATEST=$(curl -s https://api.github.com/repos/openbraininstitute/neurodamus-models/tags | jq -r '.[0].name')
+        NEURODAMUS_MODELS_LATEST=$(curl --request GET --url https://api.github.com/repos/openbraininstitute/neurodamus-models/tags --header "Authorization: Bearer $GH_TOKEN" | jq -r '.[0].name')
         echo "NEURODAMUS_MODELS_BRANCH=${{ inputs.NEURODAMUS_MODELS_BRANCH || github.event.inputs.NEURODAMUS_MODELS_BRANCH || '$NEURODAMUS_MODELS_LATEST' }}" >> $GITHUB_ENV
 
     - name: Get HEAD commit message and look for branches
