--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -45,7 +45,7 @@ jobs:
             python-version: '3.12.6'
           # macOS is only run with Python 3.12.6 due to github action cache size limits
           - os: macOS-15
-            python-version: '3.11.10'
+            python-version: '3.12.6'
       fail-fast: true
 
     steps:
@@ -106,17 +106,17 @@ jobs:
         brew unlink fmt
         echo "$(brew --prefix)/opt/flex/bin:$(brew --prefix)/opt/bison/bin" >> $GITHUB_PATH
 
-    - name: Cache python virtual env
-      id: cache-venv
-      uses: actions/cache@v3
-      env:
-        cache-name: cache-venv
-      with:
-        path: venv
-        key: ${{ matrix.os }}-libsonata-${{ env.LIBSONATA_BRANCH }}-py${{ matrix.python-version }}
+    # - name: Cache python virtual env
+    #   id: cache-venv
+    #   uses: actions/cache@v3
+    #   env:
+    #     cache-name: cache-venv
+    #   with:
+    #     path: venv
+    #     key: ${{ matrix.os }}-libsonata-${{ env.LIBSONATA_BRANCH }}-py${{ matrix.python-version }}
 
     - name: Upgrade pip and install base Python packages
-      if: steps.cache-venv.outputs.cache-hit != 'true'
+      # if: steps.cache-venv.outputs.cache-hit != 'true'
       run: |
         python -m venv venv
         . ./venv/bin/activate
@@ -127,7 +127,7 @@ jobs:
       run: echo "${{ github.workspace }}/venv/bin" >> $GITHUB_PATH
 
     - name: Install libsonata
-      if: steps.cache-venv.outputs.cache-hit != 'true'
+      # if: steps.cache-venv.outputs.cache-hit != 'true'
       run: |
         CC=mpicc CXX=mpic++ pip install git+https://github.com/openbraininstitute/libsonata@${{ env.LIBSONATA_BRANCH }}
 
@@ -186,7 +186,7 @@ jobs:
         cmake --build nrn/build --target install
 
     - name: Install mpi4py
-      if: steps.cache-venv.outputs.cache-hit != 'true'
+      # if: steps.cache-venv.outputs.cache-hit != 'true'
       run: |
         pip install mpi4py
 
