--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -6,6 +6,14 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - 'neurodamus/**'
+      - 'tests/**'
+      - '.github/workflows/**'
+      - 'ci/**'
+      - 'pyproject.toml'
+      - 'tox.ini'
+      - 'requirements.txt'
   push:
     branches:
       - main
