--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -120,7 +120,8 @@ jobs:
       run: |
         python -m venv venv
         . ./venv/bin/activate
-        python -m pip install --upgrade pip setuptools
+        python -m pip install --upgrade pip
+        pip install --upgrade setuptools
         pip install cython numpy wheel pkgconfig
 
     - name: Add virtual environment to PATH
