--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -35,8 +35,6 @@ on:
 env:
   NEURON_COMMIT_ID: '7175203'
   RDMAV_FORK_SAFE: '1'
-  # todo remove after https://github.com/neuronsimulator/nrn/pull/3507 is merged
-  NEURON_BRANCH: 'katta/corenrn_reports'
 
 jobs:
   simulation:
@@ -161,11 +159,14 @@ jobs:
         path: nrn
         # todo revert after https://github.com/neuronsimulator/nrn/pull/3507 is merged
         # key: ${{ matrix.os }}-neuron-${{ env.NEURON_BRANCH }}-${{ env.NEURON_COMMIT_ID }}-py${{ matrix.python-version }}
-        key: ${{ matrix.os }}-neuron-katta_corenrn_reports-${{ env.NEURON_COMMIT_ID }}-py${{ matrix.python-version }}
+        key: ${{ matrix.os }}-neuron-katta/corenrn_reports-${{ env.NEURON_COMMIT_ID }}-py${{ matrix.python-version }}
 
 
     - name: Install NEURON
       if: steps.cache-neuron.outputs.cache-hit != 'true'
+      # todo remove after https://github.com/neuronsimulator/nrn/pull/3507 is merged
+      env:
+        NEURON_BRANCH: 'katta/corenrn_reports'
       run: |
         export SONATAREPORT_DIR=$(pwd)/libsonatareport/build/install
         if [[ ${{ env.NEURON_BRANCH }} == 'master' ]]; then
