--- a/tox.ini
+++ b/tox.ini
@@ -93,7 +93,7 @@ setenv =
     NEURON_INIT_MPI=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
-    pytest -s -x --durations=5 --durations-min=15 --basetemp={toxinidir}/removeme {posargs:tests/integration-e2e/test_reports.py}
+    pytest -s -x --forked --durations=5 --durations-min=15 --basetemp={toxinidir}/removeme {posargs:tests/integration-e2e/test_reports.py}
 
 [testenv:scientific]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
