--- a/tox.ini
+++ b/tox.ini
@@ -84,6 +84,17 @@ commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
     pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/integration-e2e}
 
+[testenv:removeme]
+# Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
+passenv = *
+setenv =
+    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
+    NEURON_INIT_MPI=1
+commands =
+    python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
+    pytest -s -x --basetemp={toxinidir}/removeme --durations=5 --durations-min=15 {posargs:tests/integration-e2e/test_reports.py}
+
 [testenv:scientific]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
