--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 name = neurodamus
 
 [tox]
-envlist = format, unit, unit-ngv-mpi, unit-mpi, baseline, integration-e2e, scientific
+; envlist = format, unit, unit-ngv-mpi, unit-mpi, baseline, integration-e2e, scientific
+envlist = removeme
 
 [testenv]
 deps =
@@ -34,6 +35,23 @@ allowlist_externals =
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
+
+[testenv:removeme]
+deps =
+    {[testenv]deps}
+    pytest-cov
+    neuron-nightly
+    morphio
+setenv =
+    NEURON_INIT_MPI=0
+    PYTHONPATH={toxinidir}
+    COVERAGE_FILE = .coverage.unit
+allowlist_externals =
+    {toxinidir}/ci/build_ndcore.sh
+    sh
+commands =
+    {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
+    sh -c ". {toxworkdir}/.envfile && pytest -x --forked {posargs:tests/unit/test_loadbalance.py}"
 
 [testenv:unit-ngv-mpi]
 deps =
