--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,7 @@
 name = neurodamus
 
 [tox]
-; envlist = format, unit, unit-ngv-mpi, unit-mpi, baseline, integration-e2e, scientific
-envlist = removeme
+envlist = format, unit, unit-ngv-mpi, unit-mpi, baseline, integration-e2e, scientific
 
 [testenv]
 deps =
