limit pytest-cov to something below 7.0.0

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
 [testenv:baseline]
 deps =
     {[testenv]deps}
-    pytest-cov
+    pytest-cov<7.0.0
 setenv =
     PYTHONPATH={toxinidir}
     COVERAGE_FILE = .coverage.baseline
