I follow the suggestion in the changelog here:
https://pypi.org/project/pytest-cov/7.0.0/

to fix the problem with subprocesses

--- a/tox.ini
+++ b/tox.ini
@@ -8,10 +8,13 @@ envlist = format, unit, unit-ngv-mpi, unit-mpi, baseline, integration-e2e, scien
 deps =
     -r tests/requirements.txt
 
+[run]
+patch = subprocess
+
 [testenv:baseline]
 deps =
     {[testenv]deps}
-    pytest-cov<7.0.0
+    pytest-cov
 setenv =
     PYTHONPATH={toxinidir}
     COVERAGE_FILE = .coverage.baseline
