--- a/tox.ini
+++ b/tox.ini
@@ -8,13 +8,11 @@ envlist = format, unit, unit-ngv-mpi, unit-mpi, baseline, integration-e2e, scien
 deps =
     -r tests/requirements.txt
 
-[run]
-patch = subprocess
-
 [testenv:baseline]
 deps =
     {[testenv]deps}
-    pytest-cov
+    coverage>=7.10.6
+    pytest-cov>=7.0
 setenv =
     PYTHONPATH={toxinidir}
     COVERAGE_FILE = .coverage.baseline
@@ -24,7 +22,8 @@ commands =
 [testenv:unit]
 deps =
     {[testenv]deps}
-    pytest-cov
+    coverage>=7.10.6
+    pytest-cov>=7.0
     neuron-nightly
     morphio
 setenv =
@@ -41,7 +40,8 @@ commands =
 [testenv:unit-ngv-mpi]
 deps =
     {[testenv]deps}
-    pytest-cov
+    coverage>=7.10.6
+    pytest-cov>=7.0
     neuron-nightly
     morphio
     -r tests/unit-mpi/requirements.txt
@@ -61,7 +61,8 @@ commands =
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 deps =
     {[testenv]deps}
-    pytest-cov
+    coverage>=7.10.6
+    pytest-cov>=7.0
     neuron-nightly
     -r tests/unit-mpi/requirements.txt
 setenv =
