--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ addopts = [
 markers = ["slow: marks tests as slow"]
 
 [tool.coverage.run]
+patch = ["subprocess"]
 branch = false
 parallel = false
 relative_files = true
@@ -174,3 +175,5 @@ max-branches = 12
 max-statements = 50
 # Maximum number of public methods for a class (see R0904).
 max-public-methods = 60
+
+
