fix for `pytest-cov: 7.0.0` (#385)
## Context
fix #384

pytestcov broke because:

> 7.0.0 (2025-09-09)
Dropped support for subprocesses measurement.

> It was a feature added long time ago when coverage lacked a nice way
to measure subprocesses created in tests. It relied on a .pth file,
there was no way to opt-out and it created bad interations with
[coverage’s new patch
system](https://coverage.readthedocs.io/en/latest/config.html#run-patch)
added in
[7.10](https://coverage.readthedocs.io/en/7.10.6/changes.html#version-7-10-0-2025-07-24).

> To migrate to this release you might need to enable the suprocess
patch, example for .coveragerc:

> [run]
patch = subprocess
This release also requires at least coverage 7.10.6.

> Switched packaging to have metadata completely in pyproject.toml and
use [hatchling](https://pypi.org/project/hatchling/) for building.
Contributed by Ofek Lev in
[#551](https://github.com/pytest-dev/pytest-cov/pull/551) with some
extras in [#716](https://github.com/pytest-dev/pytest-cov/pull/716).

> Removed some not really necessary testing deps like six.

## Scope
try:
```
[run]
patch = subprocess
```

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,8 +56,8 @@ addopts = [
 markers = ["slow: marks tests as slow"]
 
 [tool.coverage.run]
+patch = ["subprocess"]
 branch = false
-parallel = false
 relative_files = true
 source_pkgs = [
     "neurodamus",
