--- a/tox.ini
+++ b/tox.ini
@@ -7,11 +7,12 @@ envlist = format, unit, unit-ngv-mpi, unit-mpi, baseline, integration-e2e, scien
 [testenv]
 deps =
     -r tests/requirements.txt
+    coverage>=7.10.6
+    pytest-cov>=7.0
 
 [testenv:baseline]
 deps =
     {[testenv]deps}
-    pytest-cov
 setenv =
     PYTHONPATH={toxinidir}
     COVERAGE_FILE = .coverage.baseline
@@ -21,7 +22,6 @@ commands =
 [testenv:unit]
 deps =
     {[testenv]deps}
-    pytest-cov
     neuron-nightly
     morphio
 setenv =
@@ -38,7 +38,6 @@ commands =
 [testenv:unit-ngv-mpi]
 deps =
     {[testenv]deps}
-    pytest-cov
     neuron-nightly
     morphio
     -r tests/unit-mpi/requirements.txt
@@ -58,7 +57,6 @@ commands =
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 deps =
     {[testenv]deps}
-    pytest-cov
     neuron-nightly
     -r tests/unit-mpi/requirements.txt
 setenv =
