Add `memray` to dependencies for enhanced memory tracking

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "h5py",
     "docopt-ng",
     "libsonata",
-    "psutil"
+    "psutil",
+    "memray"
 ]
 requires-python=">=3.9"
 
